[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Sounds/Intro_Theme.ogg" type="AudioStream" id=1]
[ext_resource path="res://Scripts/Boot.gd" type="Script" id=2]
[ext_resource path="res://Assets/Fonts/NotoSans/NotoSans-Italic.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Fonts/NotoSans/NotoSans-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/Sounds/BeepHigher.ogg" type="AudioStream" id=5]
[ext_resource path="res://Scenes/Extras/LoadingCircle.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 55
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 46
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 14
font_data = ExtResource( 4 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Loading" type="Timer" parent="."]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
autoplay = true
bus = "Music"

[node name="Background" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Starting" type="Label" parent="Background"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -316.0
margin_top = -140.5
margin_right = 316.0
margin_bottom = 140.5
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 1 )
text = "Now starting Hacknet"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wait" type="Label" parent="Background"]
visible = false
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -316.0
margin_top = -424.0
margin_right = 316.0
margin_bottom = -178.0
custom_fonts/font = SubResource( 2 )
text = "Please wait..."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadingCircle" parent="Background" instance=ExtResource( 6 )]
position = Vector2( 960, 848 )

[node name="OtherBackground" type="ColorRect" parent="."]
visible = false
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="OtherBackground"]
margin_right = 1925.0
margin_bottom = 1077.0
custom_fonts/normal_font = SubResource( 3 )
scroll_active = false
scroll_following = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fade" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="Delay" type="Timer" parent="Fade"]
wait_time = 2.0
one_shot = true
autostart = true

[node name="Beeping" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -80.0
bus = "Sound Effects 1"

[node name="AutoSwitch" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[connection signal="timeout" from="Fade" to="." method="_on_Fade_timeout"]
[connection signal="timeout" from="Fade/Delay" to="." method="_on_Delay_timeout"]
[connection signal="timeout" from="AutoSwitch" to="." method="_on_AutoSwitch_timeout"]
